# break-bell

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ScheduleList.tsx  SettingsPanel.tsx  SetupCard.tsx  StatusBar.tsx  ui.tsx
src/components/overlay/: CountdownRing.tsx  OverlayRoot.tsx
src/lib/: format.ts  ipc.ts  mobile-alarm.ts  mobile-native.ts  schedule.test.ts  schedule.ts
