[package]
name = "break-bell"
version = "0.1.0"
description = "歇钟 · 喝水/拉伸 强制休息闹钟"
authors = ["Garry"]
edition = "2021"

[lib]
name = "break_bell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "rt"] }
rodio = "0.19"
chrono = "0.4"

# 桌面专属：开机自启
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

# macOS：抬高遮罩窗 NSWindow 层级，盖住菜单栏/Dock 并浮于全屏 App 之上
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[profile.dev]
strip = "debuginfo"

[profile.release]
strip = true
