[package]
name = "break-bell"
version = "0.1.0"
description = "歇钟 · 喝水/拉伸 强制休息闹钟"
authors = ["Garry"]
edition = "2021"

[lib]
name = "break_bell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

# 桌面专属：托盘、tokio 调度、rodio 响铃、开机自启
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["time", "rt"] }
rodio = "0.19"

# 安卓：JNI 调用原生 AlarmBridge（精确闹钟 + 悬浮窗强制休息）
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

# macOS：抬高遮罩窗 NSWindow 层级
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[profile.dev]
strip = "debuginfo"

[profile.release]
strip = true
